# inconvenient-resume-delivery

./: Makefile  README.md  kind-with-registry.sh
charts/charts/: fastapi-0.2.6.tgz
charts/fastapi/: Chart.yaml  values.yaml
charts/fastapi/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  ingress.yaml  migration-job.yaml  service.yaml  static-config-volume.yaml
charts/inconvenient_resume_api/: Chart.yaml  values.yaml
charts/inconvenient_resume_api/charts/: fastapi-0.2.6.tgz
charts/inconvenient_resume_app/: Chart.yaml  values.yaml
charts/inconvenient_resume_app/charts/: fastapi-0.2.6.tgz
charts/umbrella/: Chart.yaml  values.yaml
inconvenient_resume_api/: Dockerfile  README.md  pyproject.toml
inconvenient_resume_api/alembic/: env.py
inconvenient_resume_api/alembic/versions/: 7503ed3bde35_first_migration.py
inconvenient_resume_api/inconvenient_resume_api/: config.py  deps.py  initial_data.py  main.py  models.py
inconvenient_resume_api/inconvenient_resume_api/logic/user/commands/: login_command.py
inconvenient_resume_api/inconvenient_resume_api/logic/user/queries/: get_resume_query.py
inconvenient_resume_api/inconvenient_resume_api/routes/: __init__.py  login.py  user.py  well_known.py
inconvenient_resume_api/inconvenient_resume_api/services/: auth.py  user.py
inconvenient_resume_app/: Dockerfile  README.md  pyproject.toml
inconvenient_resume_app/inconvenient_resume_app/: config.py  main.py
inconvenient_resume_app/inconvenient_resume_app/screens/: login_screen.py  resume_screen.py  user_screen.py
(+3 files in other folders)
